[profile.release]
# 发布模式开启优化程序大小
opt-level = "s"

[workspace.package]
authors = [
    "mzdk100 <mzdk100@foxmail.com>",
    "lwboy <liwenboy2008@126.com>"
]
description = "RigelA screen reader (rsr)."
license = "Apache-2.0"
keywords = ["screen-reader", "accessibility"]
version = "0.1.8"
edition = "2021"
readme = "README.md"
repository = "https://gitcode.net/mzdk100/rigela.git"

[workspace.dependencies.chrono]
version = "0.4.38"

[workspace.dependencies.parking_lot]
version = "0.12.3"

[workspace.dependencies.log]
version = "0.4.22"

[workspace.dependencies.tokio]
version = "1.39.1"

[workspace.dependencies.serde]
version = "1.0.204"

[workspace.dependencies.win-wrap]
version = "0.2.2"

[workspace.dependencies.windows]
version = "0.58.0"

[workspace.dependencies.windows-core]
version = "0.58.0"

[workspace]
members = [
    'a11y',
    "build_helper",
    "macros",
    "main",
    "peeper",
    "proxy32",
    "resources",
    "utils"
]
resolver = "2"
