[package]
name = "a11y"  # A11y is the abbreviation for accessibility
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
jab = ["JabLib"]
ia2 = ["IAccessible2Lib", "win-wrap/msaa"]
JabLib = ["rigela-utils/library"]
IAccessible2Lib = ["rigela-utils/library", "windows/windows-interface"]

[dependencies.win-wrap]
path = "../win-wrap"
optional = true

[dependencies.rigela-utils]
path = "../utils"
optional = true

[dependencies.windows]
workspace = true
optional = true