[package]
name = "access-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-interface = "0.52.0"

[dependencies.windows]
version = "0.52.0"
features = ["Win32_System_Com", "Win32_UI_Accessibility"]
