[package]
name = "cargo-rigela"
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.embed-resource]
# 嵌入资源信息到程序中
version = "2.4.2"

[dependencies.chrono]
# 日期和时间
version = "0.4.37"
