[package]
name = "cargo-rigela"
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.embed-resource]
# 嵌入资源信息到程序中
version = "3.0.1"

[dependencies.chrono]
workspace = true

[dependencies.cargo-emit]
workspace = true
