[package]
name = "rigela-macros"
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
heck = "0.5.0-rc.1"
async-trait = "0.1.77"

[dependencies.syn]
version = "2.0.49"
features = ["full"]
