[package]
name = "rigela-main"
description.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
default-run = "rigela-main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.i18n]
# 配置I18N国际化多语言支持
default-locale = "zh-CN"
# 这个配置让'cargo i18n'命令行工具知道在哪里可以找到你的翻译。要保证和传给“rust_i18n::i18n！”方法的路径相同。
load-path = "locale"

[[bin]]
path = "src/updater/main.rs"
name = "updater"

[dependencies.a11y]
# 一个辅助功能API库，封装了非微软官方提供的无障碍技术
path = "../a11y"

[dependencies.peeper]
# 跨进程收集信息（例如输入法和GDI绘图接口信息）
path = "../peeper"
features = ["server"]

[dependencies.win-wrap]
# Windows Api的安全封装
path = "../win-wrap"
features = ["uia", "registry", "tts", "pth"]

[dependencies.tokio]
# 异步运行时（携程框架）
version = "1.36.0"
features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "process",
    "time"
]

[build-dependencies.embed-manifest]
# 嵌入清单信息到程序中
version = "1.4.0"

[build-dependencies.cargo-rigela]
path = "../build_helper"

[target.'cfg(target_arch = "x86_64")'.dependencies.rigela-proxy32]
path = "../proxy32"

[dependencies.rigela-macros]
path = "../macros"

[dependencies.rigela-resources]
path = "../resources"

[dependencies.rigela-utils]
path = "../utils"
features = ["bass", "killer", "logger", "clip"]

[dependencies.serde]
# 用于数据序列化和反序列化
version = "1.0.197"
features = ["derive"]

[dependencies.toml]
version = "0.8.10"

[dependencies]
# 查看日期和时间
chrono = "0.4.34"

# 配置I18N国际化多语言支持
rust-i18n = "3.0.1"

# 日志库
log = "0.4.21"

# 异步trait
async-trait = "0.1.77"

# 解析html
select = "0.6.0"

# 压缩解压
zip = "0.6.6"

[dependencies.reqwest]
# 网络请求
version = "0.11.24"
features = ["json"]

[dependencies.nwd]
version = "1.0.5"
package = "native-windows-derive"

[dependencies.nwg]
version = "1.0.13"
package = "native-windows-gui"
