[package]
name = "rigela-main"
description.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
default-run = "rigela-main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.i18n]
# 配置I18N国际化多语言支持
default-locale = "zh-CN"
# 这个配置让'cargo i18n'命令行工具知道在哪里可以找到你的翻译。要保证和传给“rust_i18n::i18n！”方法的路径相同。
load-path = "locale"

[[bin]]
path = "src/updater/main.rs"
name = "updater"

[dependencies.a11y]
# 一个辅助功能API库，封装了非微软官方提供的无障碍技术
path = "../a11y"
features = ["ia2", "jab"]

[dependencies.peeper]
# 跨进程收集信息（例如输入法和GDI绘图接口信息）
path = "../peeper"
features = ["server"]

[dependencies.win-wrap]
# Windows Api的安全封装
path = "../win-wrap"
features = ["uia", "registry", "tts", "pth", "control", "shell"]

[dependencies.tokio]
# 异步运行时（携程框架）
workspace = true
features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "process",
    "time"
]

[build-dependencies.embed-manifest]
# 嵌入清单信息到程序中
version = "1.4.0"

[build-dependencies.cargo-rigela]
path = "../build_helper"

[target.'cfg(target_arch = "x86_64")'.dependencies.rigela-proxy32]
path = "../proxy32"
features = ["process"]

[dependencies.rigela-macros]
path = "../macros"

[dependencies.rigela-resources]
path = "../resources"

[dependencies.rigela-utils]
path = "../utils"
features = ["bass", "killer", "ibmeci", "logger", "clip", "screen", "color"]

[dependencies.serde]
# 用于数据序列化和反序列化
workspace = true
features = ["derive"]

[dependencies.toml]
version = "0.8.12"

[dependencies]
# 配置I18N国际化多语言支持
rust-i18n = "3.0.1"

# 异步trait
async-trait = "0.1.80"

# 解析html
select = "0.6.0"

# 压缩解压
zip = "0.6.6"

# 跨线程去锁传输数据
arc-swap = "1.7.1"

[dependencies.chrono]
# 查看日期和时间
workspace = true

[dependencies.bitflags]
# 位操作
version = "2.5.0"
features = ["serde"]

[dependencies.log]
# 日志库
workspace = true

[dependencies.reqwest]
# 网络请求
version = "0.12.4"
features = ["json"]

[dependencies.nwd]
version = "1.0.5"
package = "native-windows-derive"

[dependencies.nwg]
version = "1.0.13"
package = "native-windows-gui"
