[package]
name = "peeper"
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["model", "utils", "tokio/rt-multi-thread", "tokio/sync"]
dll = ["client", "handler"]
handler = []
model = []
server = ["model", "utils", "tokio/rt-multi-thread"]
utils = []

[dependencies]
log = "0.4.21"

[dependencies.retour]
version = "0.3.1"
features = ["default"]

[dependencies.win-wrap]
path = "../win-wrap"
features = ["input", "hook"]

[dependencies.rigela-utils]
path = "../utils"
features = ["pipe", "fs"]

[dependencies.windows]
version = "0.54.0"
features = ["Win32_Foundation"]

[dependencies.serde]
features = ["derive"]
version = "1.0.197"

[dependencies.tokio]
version = "1.36.0"
optional = true
