[package]
name = "peeper"
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["win-wrap/common", "win-wrap/hook"]
client = ["model", "utils", "tokio/rt-multi-thread", "tokio/sync", "rigela-utils/pipe"]
dll = ["client", "handler", "win-wrap/common", "win-wrap/ext", "win-wrap/hook"]
handler = ["win-wrap/input"]
model = ["serde/derive"]
server = ["model", "utils", "tokio/rt-multi-thread", "rigela-utils/pipe"]
utils = []

[dependencies]
log = "0.4.21"

[dependencies.retour]
version = "0.3.1"
optional = true

[dependencies.win-wrap]
path = "../win-wrap"
optional = true

[dependencies.rigela-utils]
path = "../utils"
optional = true

[dependencies.windows]
version = "0.54.0"
optional = true

[dependencies.serde]
version = "1.0.197"
optional = true

[dependencies.tokio]
version = "1.36.0"
optional = true

[build-dependencies.cargo-rigela]
path = "../build_helper"
