[package]
name = "peeper"
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["win-wrap/common", "win-wrap/hook"]
client = ["model", "utils", "tokio/rt-multi-thread", "tokio/sync", "rigela-utils/pipe", "log/std"]
dll = ["client", "handler", "win-wrap/common", "win-wrap/ext", "win-wrap/hook"]
handler = ["win-wrap/input"]
model = ["serde/derive"]
server = ["model", "utils", "tokio/rt-multi-thread", "rigela-utils/pipe", "log/std"]
utils = []

[dependencies.log]
workspace = true
optional = true

[dependencies.retour]
version = "0.3.1"
optional = true

[dependencies.win-wrap]
workspace = true
optional = true

[dependencies.rigela-utils]
path = "../utils"
optional = true

[dependencies.windows]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
optional = true

[build-dependencies.cargo-rigela]
path = "../build_helper"
