[package]
name = "rigela-proxy32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
features = ["rt-multi-thread"]
version = "1.36.0"

[dependencies.log]
version = "0.4.20"

[dependencies.serde]
# 用于数据序列化和反序列化
version = "1.0.196"

[target.'cfg(target_arch = "x86")'.dependencies.encoding_rs]
version = "0.8.33"

[target.'cfg(target_arch = "x86")'.dependencies.peeper]
path = "../peeper"

[target.'cfg(target_arch = "x86")'.dependencies.rigela-resources]
path = "../resources"

[dependencies.rigela-utils]
path = "../utils"

[target.'cfg(target_arch = "x86")'.dependencies.win-wrap]
path = "../win-wrap"

[build-dependencies.cargo-rigela]
path = "../build_helper"
