[package]
name = "rigela-proxy32"
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["server"]
client = ["model", "rigela-utils/pipe", "tokio/net"]
model = ["serde/derive"]
process = ["client"]
server = ["model", "rigela-utils/ibmeci", "tokio/net", "peeper/default", "log/std"]

[dependencies.tokio]
workspace = true
optional = true

[dependencies.log]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[target.'cfg(target_arch = "x86")'.dependencies.peeper]
path = "../peeper"
optional = true

[dependencies.rigela-utils]
path = "../utils"
optional = true

[build-dependencies.cargo-rigela]
path = "../build_helper"
