[package]
name = "rigela-resources"
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitar = "0.13.0"
blake2 = "0.11.0-pre.4"
url = "2.5.4"

[dependencies.log]
workspace = true

[dependencies.futures-util]
version = "0.3.31"
default-features = false
features = ["std"]

[dependencies.tokio]
workspace = true
features = ["fs", "io-std", "macros", "time", "rt-multi-thread"]

[build-dependencies]
blake2 = "0.11.0-pre.4"

[build-dependencies.bitar]
version = "0.13.0"
features = ["compress"]

[build-dependencies.tokio]
workspace = true
features = ["fs", "io-std", "macros", "time", "rt-multi-thread"]

[build-dependencies.futures-util]
version = "0.3.31"
default-features = false
features = ["std"]

[build-dependencies.cargo-emit]
workspace = true
