[package]
name = "rigela-utils"
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bass = ["win-wrap/common"]
clip = ["clipboard"]
fs = ["home", "tokio/fs", "tokio/io-util"]
killer = []
logger = ["log4rs"]
pipe = ["serde_json_bytes", "serde/derive", "tokio/net", "tokio/time"]

[dependencies]
# 输出日志
log = "0.4.21"

[dependencies.home]
version = "0.5.9"
optional = true

[dependencies.clipboard]
version = "0.5.0"
optional = true

[dependencies.log4rs]
version = "1.3.0"
optional = true

[dependencies.serde]
# 用于数据序列化和反序列化
version = "1.0.197"
optional = true

[dependencies.tokio]
# 异步运行时（携程框架）
version = "1.36.0"
optional = true

[dependencies.serde_json_bytes]
version = "0.2.2"
optional = true

[dependencies.win-wrap]
path = "../win-wrap"
optional = true
