[package]
name = "rigela-utils"
description = "RigelA项目使用的工具函数库。"
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bass = ["library", "win-wrap/common"]
clip = ["clipboard"]
color = []
fs = ["win-wrap/shell", "tokio/fs", "tokio/io-util"]
ibmeci = ["encoding_rs/fast-gb-hanzi-encode"]
killer = ["pipe"]
library = ["fs"]
logger = ["log4rs"]
pipe = ["serde_json_bytes", "serde/derive", "tokio/net", "tokio/io-util", "tokio/time"]
screen = ["win-wrap/graphic", "png"]

[dependencies.log]
# 输出日志
workspace = true

[dependencies.clipboard]
# 剪贴板操作
version = "0.5.0"
optional = true

[dependencies.encoding_rs]
# 字符串编解码
version = "0.8.33"
optional = true

[dependencies.log4rs]
version = "1.3.0"
optional = true

[dependencies.serde]
# 用于数据序列化和反序列化
workspace = true
optional = true

[dependencies.tokio]
# 异步运行时（携程框架）
workspace = true
optional = true

[dependencies.serde_json_bytes]
version = "0.2.2"
optional = true

[dependencies.win-wrap]
path = "../win-wrap"
version = "0.1"
optional = true

[dependencies.png]
version = "0.17.13"
optional = true
