[package]
name = "win-wrap"
license.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
msaa = []
uia = ["com"]
audio = []
com = ["common", "windows/Win32_System_Ole"]
common = ["windows/Win32_Globalization", "windows/Win32_System_Diagnostics_Debug", "windows/Win32_System_SystemServices", "windows/Win32_UI_WindowsAndMessaging", "windows/Win32_UI_Input", "windows/Win32_System_LibraryLoader", "windows/Win32_System_Threading"]
ext = ["common"]
hook = ["message", "threading"]
input = ["ext", "windows/Win32_UI_Input_Ime", "windows/Win32_UI_Input_KeyboardAndMouse"]
message = []
pth = ["windows/Win32_System_Performance"]
registry = ["windows/Win32_System_Registry"]
shell = []
threading = ["message", "windows/Win32_Security"]
tts = ["windows/Media_SpeechSynthesis", "windows/Storage_Streams", "windows/Media_Core", "windows/Foundation_Collections"]

[dependencies.windows]
# windows的所有API
version = "0.54.0"
optional = true
