[package]
name = "win-wrap"
license.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
audio = []
com = ["common", "ext", "windows/Win32_System_Com", "windows/Win32_System_Ole"]
common = ["windows/Win32_Globalization", "windows/Win32_System_Diagnostics_Debug", "windows/Win32_System_SystemServices", "windows/Win32_UI_WindowsAndMessaging", "windows/Win32_UI_Input", "windows/Win32_System_LibraryLoader", "windows/Win32_System_Threading"]
control = ["common", "ext", "graphic", "message", "windows/Win32_Foundation", "windows/Win32_UI_WindowsAndMessaging", "windows/Win32_UI_Controls", "windows/Win32_UI_Controls_RichEdit", "windows/Win32_UI_Controls_Dialogs"]
ext = ["common"]
graphic = ["common", "ext", "windows/Win32_Graphics_Gdi", "windows/Win32_Graphics_GdiPlus"]
hook = ["message", "threading"]
input = ["ext", "windows/Win32_UI_Input_Ime", "windows/Win32_UI_Input_KeyboardAndMouse", "windows/Win32_UI_Controls"]
memory = ["windows/Win32_System_Memory"]
message = []
msaa = ["common", "message", "input", "threading"]
pth = ["windows/Win32_System_Performance"]
registry = ["windows/Win32_System_Registry"]
shell = ["com", "input", "windows/Win32_UI_Shell", "windows/Win32_Storage_FileSystem", "windows/Win32_UI_Shell_Common"]
threading = ["message", "windows/Win32_Security"]
tts = ["windows/Media_SpeechSynthesis", "windows/Storage_Streams", "windows/Media_Core", "windows/Foundation_Collections"]
uia = ["com", "msaa", "windows/Win32_UI_Accessibility", "windows/implement"]

[dependencies.windows]
# windows的所有API
workspace = true
optional = true
